# cs171-hw3-2025fall-SaLTed114

./: .gitignore  CMakeLists.txt  render.sh  run.sh
data/: cbox_no_light.exr  cbox_no_light_refract.exr
include/rdr/: bvh_debug.h  bvh_tree.h
report/: report.aux  report.tex
src/: CMakeLists.txt  accel.cpp  bsdf.cpp  bvh_accel.cpp  integrator.cpp
src/gpu_bvh/: gpu_lbvh_builder.cu  gpu_lbvh_builder.cuh  lbvh_node.cuh  morton.cu  morton.cuh  radix_sort.cu  radix_sort.cuh
